--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -99,9 +99,15 @@ window.onload = wrap_img;
 
 <h3 id="the-outreach-office--math-department-of-mathematics-univeristy-of-toronto">The Outreach Office &amp; Math+, Department of Mathematics, Univeristy of Toronto</h3>
 
+<p>The Math Outreach Office is established with the goal of providing great programs and resources for eschool students, parents, and teachers, as well as the general public with the hope of popularizing mathematics in Canada.  During the last four years, I was involved in outreach programmes organized by the <a href="http://mathplus.math.utoronto.ca/">Math Outreach Office</a> at the University of Toronto inclduing the Canadian Open Mathematics Challenge (COMC).</p>
+
+<p>In particular, I designed and conducted the <a href="http://mathplus.math.utoronto.ca/home/cmc">Canada Math Camp</a> during the summer of 2021. It is a program organized with the patronage of the Canadian Mathematical Society with the participation of grade 8 – 10 students who did well in the COMC. It is an intensive week of problem solving techniques along with expository talks by graduate students and research mathematicians about interesting mathematical concepts beyond problem solving.</p>
+
+<p>I was also involved in the Fall Math Club series organized by the Outreach Office. In 2021, I designed and ran the Fall Math Contest Preparation Club for school students. Further, I was a speaker at the UofT Undergraduate Mathematics Union Seminar organized for introducing research level mathematics to undergraduates, a co-trainer for the Putnam competition training sessions and a co-trainer for the COMC grader training sessions.</p>
+
 <h3 id="youtube">Youtube</h3>
 
-<p>In this day and age, social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
+<p>Social media is an extremely effective tool for outreach activities. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
 <p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=GBrp8-JGOQw" target="_blank"><img align="left" src="https://img.youtube.com/vi/GBrp8-JGOQw/maxresdefault.jpg" title="අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers" width="384" height="216" hspace="20" vspace="20" /></a> 
 <br /><br /><br /><br /><br /><br /><br /></p>
@@ -118,6 +124,7 @@ window.onload = wrap_img;
 -->
 
 <h3 id="the-sri-lanka-olympiad-mathematics-foundations-slomf--the-ministry-of-education-sri-lanka">The Sri Lanka Olympiad Mathematics Foundations (SLOMF) &amp; the Ministry of Education, Sri Lanka</h3>
+
 
   </div><a class="u-url" href="/personal-webpage/Outreach/" hidden></a>
 </article>
