--- a/Research/index.html
+++ b/Research/index.html
@@ -111,13 +111,12 @@ window.onload = wrap_img;
 
 <p>Below, I discuss some of my research interests grouped by major themes. I mention the motivation behind each long-term project and the collaborators I work with. The resulting publications are <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
 
-<details open="">
+<!-- <details open>
 <summary><b>Error terms in the local and the central limit theorem for weakly dependent random variables</b></summary>      
   
-(Dynamical Systems and Stochastic Processes)<br /><br />In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). Since sequences of experimental observations are never iid, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables.<br /><br />
-As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications like billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.<br /><br />
-There are many unsolved problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix product
-</details>
+(Dynamical Systems and Stochastic Processes)<br><br>In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). Since sequences of experimental observations are never iid, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables.<br><br>
+As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications like billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.<br><br>
+There are many unsolved problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix product -->
 
   </div><a class="u-url" href="/personal-webpage/Research/" hidden></a>
 </article>
