--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -78,7 +78,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/personal-webpage/Outreach/">Outreach</a><a class="page-link" href="/personal-webpage/Publications/">Publications</a><a class="page-link" href="/personal-webpage/Research/">Research</a><a class="page-link" href="/personal-webpage/search/">Search</a></div>
+        <div class="trigger"><a class="page-link" href="/personal-webpage/Outreach/">Outreach</a><a class="page-link" href="/personal-webpage/Publications/">Publications</a><a class="page-link" href="/personal-webpage/Research/">Research</a><a class="page-link" href="/personal-webpage/search/">Search</a><a class="page-link" href="/personal-webpage/Teaching/">Teaching</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
